# amethystbot

./: Cargo.toml  README.md
migrations/: 20231220201427_birthday.sql  20231221010643_guild_settings.sql  20240125162804_welcome.sql  20240701200848_user_table.sql  20240817225726_primary_kesy.sql  20240824214947_database_creation.sql  20240830212700_quotes_table.sql  20240901024044_quote_required_role.sql  20240914040559_add_vctracker_monthly.sql  20240919210744_users_last_name.sql  20240919213825_quote_display_names.sql  20241112010849_settings_memberleaveannouncement.sql  20241121013025_custom_gif_tables.sql  20241121014942_custom_gif_required_role.sql  20241209203343_platinunm.sql  20241209204626_plat_count.sql  20241210010223_user_table_quote_stats.sql  20250129005316_create_pokemon_stats_table.sql  20250203230721_create_pokemon_moves_table.sql  20250207003851_user_table_delete_quotestats.sql  20250304151858_users_rps_stats.sql  20250310235724_roulette.sql  20250311172941_roulette_stats.sql  20250402174553_customgif_rework.sql  20250402183707_alter_customgif_filename.sql  20250405035318_customgifs_undo_file_rework.sql  20250408202707_user_setting_ping.sql  20250413035337_boost_message.sql  20250419040545_user_hug.sql  20250419043228_bot_settings.sql  20250426011038_bot_gif_settings.sql
src/: birthday.rs  data.rs  digimon.rs  events.rs  log.rs  main.rs  misc.rs  mtg.rs  stats.rs  vctracker.rs
src/commands/: misc.rs  mod.rs  stats.rs
src/modules/: birthday.rs  boost.rs  bot_management.rs  customgifs.rs  log.rs  misc.rs  mod.rs  mtg.rs  quotes.rs  settings.rs  stats.rs  vctracker.rs  welcome.rs
src/modules/minigames/: bomb.rs  mod.rs  roulette.rs  (+1 more)
src/pokemon/: data.rs  generation.rs  generator.rs  mod.rs  poke_commands.rs
(+4 files in other folders)
