[package]
name = "amethystbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.7"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "mysql", "json"] }
dotenv = "0.15.0"
serde_json = "1"
rand = "0.8.5"
chrono = "0.4.31"
