[package]
name = "amethystbot"
edition = "2024"
version = "1.4.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "mysql", "json", "chrono"] }
dotenv = "0.15.0"
serde_json = "1"
rand = "0.8.5"
chrono = "0.4"
cron = "0.12.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3.30"
base64 = "0.22.1"
poise = "0.6.1"
